--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,22 @@
+@import './sass/index.scss';
 html, body {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
     font-size: 14px;
-    font-family: sans-serif;
-    background-color: beige;
+    font-weight: 400;
+    font-family: 'Franklin Gothic Medium';
+    color: white;
+    background-image: linear-gradient(to right top, #bfd16b, #82d48a, #3cd2b3, #00cad6, #27beeb, #42bef0, #57bff5, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+    background-attachment: fixed;
+}
+#app{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+
+    
 }
